--- a/try2/todo
+++ b/try2/todo
@@ -1,3 +1,4 @@
 ✅ Step 1: Detect Local Peers and Use Shared Memory
 ⬜ Step 2: Establish Direct P2P TCP Connections
+     2.1 : peer register and R.W.
 ⬜ Step 3: Improve the Messaging Protocol (ZeroMQ, WebRTC, or QUIC)
